2005-07-11 Mikhail Khodjaiants
	Bug 102563: Break points not working. 
	Temporary switching back to use file names instead of full paths.
	* CBreakpointManager.java

2005-07-10 Mikhail Khodjaiants
	Bug 103173: Register: user created register groups disappear after debug session restart.
	* CRegisterManager.java

2005-07-08 Mikhail Khodjaiants
	Filter breakpoints before setting using the source lookup mechanism.
	* CBreakpointManager.java
	* CSourceLookupDirector.java

2005-07-08 Mikhail Khodjaiants
	Bug 79371: Setting breakpoints in the left hand side ruler of the disassembly view is sluggish.
	Asynchronous breakpoint handling.
	* CBreakpointManager.java
	* InternalDebugCoreMessages.properties
	* CDebugTarget.java

2005-07-04 Mikhail Khodjaiants
	Removed the "IBreakpointTarget" interface.
	- IBreakpointTarget.java
	* ICDebugTarget.java
	* CDebugTarget.java

2005-06-29 Mikhail Khodjaiants
	Bug 41725: I can't set a breakpoint in a function where I used attach source.
	Bug 45514: Breakpoints made is assembly view do not show in C view.
	* CDIDebugModel.java
	* IAsmSourceLine.java
	* ICBreakpoint.java
	* IDisassemblyBlock.java
	* CBreakpointManager.java
	* CBreakpoint.java
	* AsmSourceLine.java
	* DisassemblyBlock.java

2005-06-28 Mikhail Khodjaiants
	Bug 101188: Breakpoints don't work with MingW gdb.
	Use "toPortableString" instead of "toOsString" when setting the source search paths.
	* CDebugTarget.java

2005-06-27 Alain Magloire
	Change in ICDIReferenceValue.
	* cdi/org/eclipse/cdt/debug/core/cdi/model/type/ICDIReferenceValue.java
	* src/org/eclipse/cdt/debug/internal/core/model/CValue.java
	
2005-05-27 Alain Magloire
	Use the fCDIVariable instead of fCDIVariableObject when possible.
	* src/org/eclipse/cdt/debug/internal/core/model/CVariable.java

2005-05-23 Mikhail Khodjaiants
	Bug 100756: Breakpoints listed twice in Breakpoints view.
	* CBreakpointManager.java

2005-05-21 Mikhail Khodjaiants
	Minor refactoring.
	* CMemoryBlockExtension.java
